--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>BlackCat Bio</h4>
-        <p>BlackCat Bio is a work in progress. Check in later for an update.</p>
+      <div id="bottom">
+        <h1 class="bottom-text">It's coming</h1>
       </div>
     </div>
   </div>
