--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Expletus+Sans">
+    <style>
+      h1 {
+        font-family: 'Expletus Sans', serif;
+      }
+    </style>
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
